<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    android:paddingTop="20dp">

    <androidx.viewpager.widget.ViewPager
        android:clipChildren="false"
        android:id="@+id/play_view_pager"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="400dp" />

    <SeekBar
        android:secondaryProgressTint="@color/colorPrimaryDark"
        android:id="@+id/seek_bar"
        android:layout_width="match_parent"
        android:thumb="@drawable/seek"
        android:layout_height="50dp" />

    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_current_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/example_time" />

        <TextView
            android:id="@+id/tv_max_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/example_time" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_play_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/example_music"
        android:textSize="10pt" />

    <TextView
        android:id="@+id/tv_play_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/example_artist"
        android:textColor="@color/colorAccent" />

    <LinearLayout
        android:padding="3dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_play_mode_loop"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:src="@drawable/play_btn_loop_selectot" />

        <ImageView
            android:id="@+id/iv_paly_btn_prev"
            android:layout_width="0dp"
            android:layout_height="15dp"
            android:layout_weight="1"
            android:src="@drawable/ic_play_btn_prev" />

        <LinearLayout
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_play_btn_play"
                app:cardElevation="5dp"
                android:layout_margin="10dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="25dp">

                <ImageView
                    android:id="@+id/iv_play_btn_play"
                    android:layout_gravity="center"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/play_btn_play_pause_selector" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_play_btn_next"
            android:layout_width="0dp"
            android:layout_height="15dp"
            android:layout_weight="1"
            android:src="@drawable/ic_play_btn_next" />

        <ImageView
            android:id="@+id/iv_play_mode_shuffle"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:src="@drawable/play_shuffle_selector" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <ImageView
            android:id="@+id/iv_play_btn_close"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="bottom"
            android:src="@drawable/ic_play_btn_close" />
    </LinearLayout>
</LinearLayout>